# flake8-ruff

./: .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/workflows/: main.yaml  main.yml  release.yml
src/flake8_ruff/: __init__.py
tests/: test_flake8_ruff.py
